Changes
=======

1.0.0	2013-11-19
		First "official" release with version and license

1.1.0	2013-12-12
		Standarized DH parameters based on the length of the certificate's RSA/DSA key

1.2.0	2014-06-26
		Refactored the code to improve readability
		Configuration through TLS_INTERPOSER_OPTIONS
		More consistent enabling of ECDHE
		More hooks used to tighten security

1.2.1	2014-06-27
		Add -rc4 option to eliminate most needs to manually define TLS_INTERPOSER_CIPHERS